--- a/src/components/Pages/HomePage/Hero/HeroIcons.scoped.scss
+++ b/src/components/Pages/HomePage/Hero/HeroIcons.scoped.scss
@@ -23,7 +23,7 @@
 
         & .icons-div{
             animation: reveal .2s ease-out  forwards;
-            animation-delay: calc(var(--icon-num) * 200ms);
+            animation-delay: calc(var(--icon-num) * 200ms + 1.5s);
             transform: translateX(-5%);
             clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
             background: var(--bg-teal-primary);
