--- a/src/App.scoped.scss
+++ b/src/App.scoped.scss
@@ -1,5 +1,3 @@
-@import url("./components/SCSS/helpers.scss");
-@import url("./components/SCSS/elements.scss");
 .App{
     width: 100%;
     border-radius: var(--br-sm);
@@ -9,6 +7,7 @@
     color: var(--color-primary-dark);
     font-weight: 300;
     background: var(--bg-dark-primary);
+    background: #1a1d20;
     position: relative;
     height: 100%;
 
@@ -17,6 +16,7 @@
         height: 100%;
         transition: all .8s;
         display: flex;
+        
     }
 }
 
