--- a/src/components/Pages/HomePage/Hero/Hero.scoped.scss
+++ b/src/components/Pages/HomePage/Hero/Hero.scoped.scss
@@ -38,7 +38,7 @@
       min-width: 100%;
       font-size: var(--step-1);
 
-      & > span{
+      &>span {
         font-size: var(--step-3);
       }
     }
@@ -53,11 +53,12 @@
     flex: 0 0 50% !important;
     width: 100%;
 
+
     &>div {
       animation: animation2 1s forwards;
       animation-delay: calc(var(--image-num) * 500ms);
       transform: translate(var(--translateX), var(--translateY));
-      width: 35rem;
+      width: 40rem;
       object-fit: cover;
       box-shadow: var(--box-shadow-dark);
       border-radius: var(--br-sm);
@@ -65,6 +66,8 @@
       position: absolute;
       z-index: 1;
       opacity: 0;
+      box-shadow: 6px 6px 13px #000000,
+        -6px -0px 12px #282d32;
 
       & img {
         width: 100%;
@@ -81,22 +84,25 @@
         height: 10%;
         left: 0;
         bottom: 99%;
-        // background: var(--bg-teal-primary);
-        background: #495057;
+        background: var(--bg-dark-primary);
+        // background: #343a40;
         border-top-left-radius: var(--br-sm);
         border-top-right-radius: var(--br-sm);
         display: flex;
         align-items: center;
         justify-content: flex-end;
         padding: 0 1.4rem;
+        box-shadow: 0px 0px 0px #000000,
+          -4px -4px 15px #282d32;
 
         &>div {
           display: flex;
           gap: 5px;
 
+
           & span {
-            width: min(.9vh,.8vw);
-            height: min(.9vh,.8vw);
+            width: min(.9vh, .8vw);
+            height: min(.9vh, .8vw);
             border-radius: 50%;
 
             &:nth-child(1) {
@@ -125,28 +131,32 @@
   @media (max-width:56.25em) {
     flex-direction: column;
 
-    &-text{
+    &-text {
       text-align: center;
     }
 
-    & .hero-images{
-      & > div{
+    & .hero-images {
+      &>div {
         width: 40%;
-        &:nth-child(1){
+
+        &:nth-child(1) {
           --translateY: -45% !important;
           --translateX: -70% !important;
         }
-        &:nth-child(2){
+
+        &:nth-child(2) {
           --translateY: -30% !important;
           --translateX: 0% !important;
           transform: translate(var(--translateX), var(--translateY)) scale(1.12);
           z-index: 2;
         }
-        &:nth-child(3){
+
+        &:nth-child(3) {
           --translateY: -45% !important;
           --translateX: 70% !important;
           z-index: 1;
         }
+
         &:hover {
           z-index: 2;
           transform: translate(var(--translateX), var(--translateY)) scale(1.2);
@@ -155,14 +165,15 @@
       }
     }
   }
+
   @media (max-width:37.5em) {
     flex-direction: column;
 
-    &-text{
+    &-text {
       text-align: center;
     }
 
-    & .hero-images{
+    & .hero-images {
       flex: 0 0 35% !important;
     }
   }
