--- a/src/components/Pages/HomePage/HomePage.scoped.scss
+++ b/src/components/Pages/HomePage/HomePage.scoped.scss
@@ -7,6 +7,12 @@
     overflow-y: scroll;
     display: flex;
     flex-direction: column;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+    scroll-padding-top: 55px;
+    // scroll-snap-type: ;
+    
+    
 
 
     & >*:not(.hero,.header,footer){
