--- a/src/components/Pages/HomePage/Resume/Resume.scoped.scss
+++ b/src/components/Pages/HomePage/Resume/Resume.scoped.scss
@@ -8,9 +8,12 @@
 
     &-inner {
         background: var(--bg-teal-primary);
-        padding: 6px 2px 2px 2px;
+        padding: 7px 0px 1px 0px;
         border-radius: 5px;
         box-shadow: var(--box-shadow-dark);
+        box-shadow: 6px 6px 13px #000000,
+            -12px -12px 20px #1e2226;
+
         overflow: hidden;
 
         &-inner {
@@ -19,9 +22,17 @@
             width: 100%;
             gap: 1px;
             display: grid;
-            grid-template: repeat(12, 8vh) / repeat(10, 1fr);
+            grid-template: repeat(12, 6.5vh) / repeat(10, 1fr);
             border-radius: 5px;
             position: relative;
+
+            @media (max-width:1200px) {
+                grid-template: repeat(12, 6.7vh) / repeat(10, 1fr);
+            }
+
+            @media (max-width:600px) {
+                grid-template: repeat(16, 6.3vh) / repeat(10, 1fr);
+            }
 
             & .block {
                 // background: var(--bg-dark-primary);
@@ -35,7 +46,12 @@
 
                 &__intro {
                     grid-column: 1/span 3;
-                    grid-row: 1/ span 4;
+                    grid-row: 1/ span 5;
+
+                    &> :first-child {
+                        display: flex;
+                        flex-direction: column;
+                    }
 
                     &__name {
                         font-size: var(--step-2);
@@ -75,10 +91,28 @@
                     grid-row: 4/ span 5;
                     justify-content: flex-start;
 
-                    & p {
-                        font-size: 1.5rem;
-                        line-height: 1.3;
-                        // letter-spacing: 1px;
+                    & div {
+                        &:nth-child(2) {
+                            margin-bottom: 1rem;
+                        }
+
+                        & ul {
+                            display: flex;
+                            // list-style-position:outside;
+                            list-style: none;
+                            gap: 2rem;
+                        }
+
+                        & span {
+                            font-size: 1.5rem;
+                            line-height: 1.4;
+
+                            &:nth-child(1) {
+                                font-size: 1.6rem;
+                                line-height: 1.3;
+                                font-weight: 400;
+                            }
+                        }
                     }
 
                     &-heading {
@@ -90,7 +124,7 @@
 
                 &__projects {
                     grid-column: 1/ span 3;
-                    grid-row: 5/ span 3;
+                    grid-row: 6/ span 4;
                     justify-content: flex-start;
 
                     // margin: auto 0;
@@ -146,7 +180,7 @@
 
                 &__skills {
                     grid-column: 1/ span 3;
-                    grid-row: 8/ span 2;
+                    grid-row: 10/ -1;
                     justify-content: flex-start;
 
                     &-heading {
@@ -177,28 +211,148 @@
                         font-weight: 400;
                         margin-bottom: 1rem;
                     }
-                    &-text{
+
+                    &-text {
                         font-size: 1.5rem;
-                        line-height: 1.3;   
+                        line-height: 1.4;
                     }
 
                 }
 
-                &-5 {
-                    grid-column: 8/ -1;
-                    grid-row: 9/ -1;
-
-                }
-
-                &-6 {
+                &__dev-skills {
                     grid-column: 4/ span 4;
                     grid-row: 9/ -1;
 
+                    &-heading {
+                        font-size: var(--step-0);
+                        font-weight: 400;
+                        margin-bottom: 1rem;
+                    }
+
+                    &>div {
+                        display: flex;
+                        // justify-content: center;
+                        gap: 1rem;
+
+                        &>div {
+                            flex: 0 0 calc(50% - .5rem);
+
+
+                            &:first-child {
+                                position: relative;
+
+                                &::after {
+                                    content: "";
+                                    top: 0;
+                                    right: 0px;
+                                    position: absolute;
+                                    height: 100%;
+                                    width: 1px;
+                                    background: var(--bg-teal-primary);
+                                    // background: white;
+                                }
+                            }
+
+
+                            & h4 {
+                                font-size: var(--step--1);
+                                font-weight: 400;
+                                margin-bottom: 1rem;
+                            }
+
+                            & ul {
+                                display: flex;
+                                // flex-direction: column;
+                                flex-wrap: wrap;
+                                // padding: 0 1rem;
+                                gap: 7px;
+                                row-gap: 4px;
+
+                                li {
+                                    font-size: 1.3rem;
+                                    flex: 0 0 calc(50% - 4px);
+
+                                    @media (max-width:900px) {
+                                        flex: 0 0 100%;
+                                    }
+                                }
+                            }
+                        }
+                    }
+
                 }
-                &-7 {
-                    grid-column: 1/ span 3;
-                    grid-row: 10/ -1;
+
+                &__achievements {
+                    grid-column: 8/ -1;
+                    grid-row: 9/ -1;
+
+                    & h3 {
+                        font-size: var(--step-0);
+                        font-weight: 400;
+                        margin-bottom: 1rem;
+                    }
+
                 }
+
+
+                @media (max-width:600px) {
+                    &__intro {
+                        grid-column: 1/-1;
+                        grid-row: 1/span 2;
+                        flex-direction: row;
+
+                        &>div {
+                            display: flex;
+                            flex-direction: column;
+                        }
+                    }
+
+                    &__career-obj {
+                        grid-column: 1/-1;
+                        grid-row: 3/span 3;
+                    }
+
+                    &__experience {
+                        grid-column: 1/-1;
+                        grid-row: 6/span 5;
+                        justify-content: flex-start;
+                    }
+
+                    &__projects {
+                        grid-column: 1/span 5;
+                        grid-row: 11/span 3;
+                        justify-content: flex-start;
+                    }
+
+                    &__dev-skills {
+                        grid-column: 6/-1;
+                        grid-row: 10/-1;
+                    }
+
+                    &__dev-skills {
+                        grid-column: 6/-1;
+                        grid-row: 11/ span 4;
+
+                        &>div>div ul li {
+                            // width: fit-content;
+                            // width: 100%;
+                            flex: 0 0 100%;
+                            // margin-right: 10px;
+                        }
+                    }
+
+                    &__skills {
+                        grid-column: 6/-1;
+                        grid-row: 15/-1;
+                    }
+
+                    &__achievements {
+                        justify-content: flex-start;
+                        grid-column: 1/span 5;
+                        grid-row: 14/-1;
+                    }
+                }
+
 
             }
         }
