--- a/src/components/Pages/HomePage/Hero/Hero.scoped.scss
+++ b/src/components/Pages/HomePage/Hero/Hero.scoped.scss
@@ -53,6 +53,11 @@
     flex: 0 0 50% !important;
     width: 100%;
 
+    // @media (max-width:56.25em) {
+    //   flex: 0 0 40% !important;
+    //   margin-top: 5rem;
+    // }
+
 
     &>div {
       animation: animation2 1s forwards;
@@ -174,7 +179,35 @@
     }
 
     & .hero-images {
-      flex: 0 0 35% !important;
+      flex: 0 0 50% !important;
+      & > div {
+        width: min(45rem,65%);
+
+
+        &:nth-child(1) {
+          --translateY: -75% !important;
+          --translateX: -15% !important;
+        }
+
+        &:nth-child(2) {
+          --translateY: 75% !important;
+          --translateX: 15% !important;
+          transform: translate(var(--translateX), var(--translateY)) scale(1);
+          z-index: 2;
+        }
+
+        &:nth-child(3) {
+          --translateY: 5% !important;
+          --translateX: 0% !important;
+          z-index: 1;
+        }
+
+        &:hover {
+          z-index: 2;
+          transform: translate(var(--translateX), var(--translateY)) scale(1.2);
+          box-shadow: 0px 5px 20px 7px rgba(0, 0, 0, .3);
+        }
+      }
     }
   }
 }
