Ready for first deploy.

--- a/src/components/Layout/Header/Header.scoped.scss
+++ b/src/components/Layout/Header/Header.scoped.scss
@@ -1,6 +1,6 @@
 .header {
   // height: 5rem;
-  padding: 2rem 4rem;
+  padding: 1rem min(4.5vh,4.5vw);
   color: var(--color-primary-light);
   font-weight: 300;
   box-shadow: var(--box-shadow-light);
@@ -12,10 +12,11 @@
   left: 0;
   width: 100%;
   z-index: 10;
-
+  
   & nav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
 
     & img {
@@ -25,7 +26,7 @@
     & ul {
       display: flex;
       list-style: none;
-      gap: 4rem;
+      gap: min(4vh,4vw);
       font-size: 1.5rem;
 
       & li {
@@ -67,4 +68,84 @@
       -webkit-text-stroke-width: 2px;      
     }
   }
+
+  & .footer-links{
+    display: flex;
+
+    & .links{
+        // background-color:#1a1d20 ;
+        // padding: 2rem;
+        // flex-direction: column;
+        display: flex;
+        // flex-direction: column;
+        align-self: center;
+        justify-content: space-evenly;
+        border-top-left-radius: 11px;
+        border-radius: 11px;
+        // align-self: flex-end;
+        gap: 2rem;
+        transform: translateY(0%);
+        // filter: drop-shadow(5px 0px 5px rgba(48, 121, 189) )  drop-shadow(-5px 0px 5px #c2255c );
+        
+        & a{display: block;
+            width:3.6rem;
+            height: 3.6rem;
+            // flex: 0 0 calc(25% - 1rem);
+            background-color:#1a1d20 ;
+            // filter: blur(1.2px);
+            // box-shadow:  6px 6px 28px #0a0c0d,
+            // -6px -6px 28px #2a2e33;
+            border-radius: 50%;
+            outline: 1px dashed #ffffff;
+            padding: 5px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all .4s;
+            position: relative;
+            overflow: hidden;
+            z-index: 2;
+
+            &:hover{
+                transform: scale(1.2);
+                outline:inset 1px #dee2e6;
+                outline-style:solid;
+
+                &::after,&::before{
+                    width: 50%;
+                    border-width: 1px;
+                }
+            }
+
+            & > svg{
+                position: relative;
+                z-index: 1;
+            }
+            & > img{
+                width: 100%;
+                height: 100%;
+                position: relative;
+                z-index: 1;
+            }
+            &::after,&::before{
+                content: "";
+                position: absolute;
+                top: 0;
+                width: 0%;
+                height: 100%;
+                background: var(--bg-dark-primary);
+                z-index: 0;
+                transition: all .3s;
+            }
+            &::after{
+                left: 0;
+                border-right: 0px solid #868e96;
+            }
+            &::before{
+                border-left: 0px solid #868e96;
+                right: 0;
+            }
+        }
+    }
+}
 }
