--- a/src/components/SCSS/elements.scss
+++ b/src/components/SCSS/elements.scss
@@ -1,7 +1,8 @@
 @use "./Elements-Mixins/buttons-mixin.scss" as button;
 p{
-    font-size: var(--step--1);
+    font-size: 1.6rem;
     font-weight: 300; 
+    line-height: 1.4;
     
 }
 
