--- a/src/components/UI/Loader/Loader.scoped.scss
+++ b/src/components/UI/Loader/Loader.scoped.scss
@@ -14,7 +14,7 @@
     width: 12px;
     height: 12px;
     border-radius: 50%;
-    background:var(--bg-light-primary);
+    background:var(--bg-dark-primary);
     animation-timing-function: cubic-bezier(0, 1, 1, 0);
   }
   .lds-ellipsis div:nth-child(1) {
