--- a/src/components/Pages/HomePage/Resume/Resume.scoped.scss
+++ b/src/components/Pages/HomePage/Resume/Resume.scoped.scss
@@ -1,3 +1,4 @@
+@import "./../../../SCSS/Mixins/transitions.scss";
 .resume {
     width: 100%;
     height: 200rem;
@@ -25,6 +26,11 @@
             grid-template: repeat(12, 6.5vh) / repeat(10, 1fr);
             border-radius: 5px;
             position: relative;
+
+            // &::after{
+            //     content: "";
+            //     position: relative;
+            // }
 
             @media (max-width:1200px) {
                 grid-template: repeat(12, 6.7vh) / repeat(10, 1fr);
@@ -112,7 +118,7 @@
                     @media (max-width:37.5em) {
                         grid-column: 1/-1;
                         grid-row: 6/span 5;
-                        justify-content: flex-start;
+                        // justify-content: flex;
                     }
 
                     & div {
@@ -152,8 +158,9 @@
 
                     @media (max-width:56.25em) {
                         grid-row: 5/ span 5;
-                        &-list li{
+                        &-list li,a{
                             flex-direction: column !important;
+                            align-items: flex-start !important;
                         }
                     }
 
@@ -161,8 +168,9 @@
                         grid-column: 1/span 6;
                         grid-row: 11/span 3;
                         justify-content: flex-start;
-                        &-list li{
+                        &-list li,a{
                             flex-direction: row !important;
+                            // align-items: flex-start;
                         }
                     }
 
@@ -177,18 +185,20 @@
                         margin-left: .2rem;
                         list-style-type: disc;
                         list-style-position: inside;
-                        font-size: 1.5rem;
+                        font-size: 1.4rem;
                         display: flex;
                         flex-direction: column;
                         gap: .5rem;
                         width: 100%;
-
-                        & li {
+                        
+                        & li,a {
+                            @include link-hover-primary;        
                             justify-content: space-between;
                             display: flex;
                             width: 100%;
                             align-items: center;
-
+                            cursor: pointer;
+                       
                             &>svg {
                                 font-size: 1.2rem;
                                 flex: 0 0 10%;
@@ -366,6 +376,29 @@
                         margin-bottom: 1rem;
                     }
 
+                    & ul{
+                        display: flex;
+                        flex-direction: column;
+                        gap: 1px;
+                        font-size: 1.2rem;
+
+                        & a{
+                            @include link-hover-primary;
+                        }
+
+                        & li:first-child{
+                            & svg{
+                                color: #f59f00 !important;
+                            }
+                        }
+
+                        & svg{
+                            transform: translateY(2px);
+                            color: #2f9e44;
+                            font-size: 1.2rem;
+                        }
+                    }
+
                 }
 
 
@@ -376,11 +409,11 @@
                         grid-row: 3/span 3;
                     }
 
-                    &__experience {
-                        grid-column: 1/-1;
-                        grid-row: 6/span 5;
-                        justify-content: flex-start;
-                    }
+                    // &__experience {
+                    //     grid-column: 1/-1;
+                    //     grid-row: 6/span 5;
+                    //     justify-content: flex-start;
+                    // }
                 }
 
 
